--- a/write_up/AnhLe_political_determinants_FDI.tex
+++ b/write_up/AnhLe_political_determinants_FDI.tex
@@ -29,7 +29,8 @@
 \usepackage{natbib}
 \bibpunct{(}{)}{;}{a}{}{,} % no comma between author and year
 
-\title{The political determinants of FDI spillover}
+\title{The political determinants of FDI spillover\thanks{The empirical approach in this paper draws heavily upon conversations with Professor Michael Newton, who suggested and helped with the Metropolis-Hastings approach.}}
+
 \author{Anh Le}
 
 
@@ -42,14 +43,12 @@
 
 \input{MH_twosided_logit}
 
-\input{data}
+\input{application}
 
 \input{result}
 
 \newpage
 \appendix
-\input{appendix_EM}
-
 \input{appendix_MH_ratio}
 
 \clearpage
