submitted to EOY

--- a/write_up/AnhLe_political_determinants_FDI.tex
+++ b/write_up/AnhLe_political_determinants_FDI.tex
@@ -29,13 +29,17 @@
 \usepackage{natbib}
 \bibpunct{(}{)}{;}{a}{}{,} % no comma between author and year
 
-\title{The political determinants of FDI spillover\thanks{The empirical approach in this paper draws heavily upon conversations with Professor Michael Newton, who suggested and helped with the Metropolis-Hastings approach.}}
+\title{Two-Sided Matching Model of FDI Investment Location: Estimating Both Firms' and Countries' Preferences\thanks{The Metropolis-Hastings approach in this paper draws heavily upon conversations with Professor Michael Newton. I also thank Professor Michael Ward for introducing the two-sided matching model, and Professor Andrew Delios for sharing the Japanese FDI data.}}
 
 \author{Anh Le}
 
 
 \begin{document}
 \maketitle
+
+\begin{abstract}
+In this paper, I address three long-standing issues in the literature on the political determinants of Foreign Direct Investment (FDI). First, the majority of works use FDI stock and flow as the outcome of interest even though these aggregate statistics are poor measures of multinational corporations' (MNCs) activities. Second, while recent scholarship starts theorizing about countries' demand for FDI, there has not been a satisfactory way to measure countries' preferences. Third, even though policy makers pay much attention to the quality of FDI, the academic literature has mainly focused with its quantity. I propose a new empirical approach---the two-sided matching model---that addresses these three concerns. The model derives its functional form explicitly from actors' utility functions, then uses firm-level data to estimate both firms' and countries' preferences in a matching process. Applying the two-sided model on a dataset of Japanese foreign affiliates, I find that MNCs do not prefer democracies, contradicting the prevailing theory. On the side of countries' preferences, I find tentative evidence that a government's long time horizon increases its preference for high-tech FDI.
+\end{abstract}
 
 \input{introduction}
 
@@ -47,9 +51,12 @@
 
 \input{result}
 
+\input{conclusion}
+
 \newpage
 \appendix
 \input{appendix_MH_ratio}
+\input{appendix_summary}
 
 \clearpage
 \bibliographystyle{chicago}
